<resources>
    <string name="app_name">GitHubApp</string>
    <string name="username">Username</string>
    <string name="find_a_developer">Find Great Developers Here</string>
    <string name="image_setting">Image_Setting</string>
    <string name="hint_search">Search…</string>
    <string name="users">Users</string>
    <string name="_0">0</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="error">Something Wrong</string>
    <string name="not_found">User not found</string>
    <string name="type">User</string>
    <string name="favorite">Favorite</string>
    <string name="image_favorite">Favorite Image</string>
    <string name="image_back">Favorite Image</string>
    <string name="favorited">Favorited</string>
    <string name="unfavorited">Unfavorite</string>
    <string name="icon_location">Icon Location</string>
    <string name="icon_company">Icon Company</string>
    <string name="notification_title" translatable="false">GitHub App!</string>
    <string name="notification_message">Let\'s find great developers in GitHub!</string>
    <string name="reminder_message">Reminder Activated</string>
    <string name="cancel_reminder_message">Reminder Deactivated</string>
    <string name="key_language" translatable="false">Language</string>
    <string name="key_reminder" translatable="false">Reminder</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="value_language">English</string>
    <string name="notifications">Notifications</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="reminder_summary">A reminder will notify you every 09.00</string>
    <string name="settings">Settings</string>
    <string name="undo">UNDO</string>
    <string name="image_watchers">Image Watchers</string>
    <string name="image_star">Image Star</string>
</resources>