<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:gravity="center_vertical"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="start"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_back"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <ImageView
        android:id="@+id/img_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_favorite"
        android:src="@drawable/ic_favorite_border_green" />
</androidx.appcompat.widget.Toolbar>