<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frame_favorite"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@+id/frame_favorite"
                    android:fontFamily="@font/roboto"
                    android:text="@string/find_a_developer"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_find"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shp_et_background"
                    app:queryHint="@string/hint_search" />

                <FrameLayout
                    android:id="@+id/frame_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@id/frame_setting"
                    android:elevation="10dp">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/shp_round_green" />

                    <ImageView
                        android:id="@+id/img_favorite"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_favorite"
                        android:src="@drawable/ic_favorite_white" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frame_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="10dp">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/shp_round_green" />

                    <ImageView
                        android:id="@+id/img_setting"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_setting"
                        android:src="@drawable/ic_settings" />

                </FrameLayout>
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/bg_shape_top_corners">

                <View
                    android:layout_width="32dp"
                    android:layout_height="4dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shp_oval_grey" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view_decor"
                        android:layout_width="5dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/users"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/view_decor"
                        app:layout_constraintStart_toEndOf="@id/view_decor"
                        app:layout_constraintTop_toTopOf="@+id/view_decor" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_users"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_decor"
                        tools:listitem="@layout/item_list_user" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_no_data"
                        android:layout_width="240dp"
                        android:layout_height="240dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_decor"
                        app:layout_constraintVertical_bias="0.2"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="no_data.json"
                        app:lottie_loop="true" />

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/loading"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_decor"
                        app:shimmer_auto_start="true">

                        <include layout="@layout/shimmer_effect"/>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</androidx.constraintlayout.widget.ConstraintLayout>